# vk_bot_fitness_assistant

./: .gitignore  Dockerfile  calendar_api.py  calendar_auth.py  config.py  event_parser.py  listener.py  main.py  make_token.py  pyproject.toml  requirements.txt  send_dinner.py  utils.py  vk_sender.py
